--- a/asstes/css/style-item.css
+++ b/asstes/css/style-item.css
@@ -418,10 +418,14 @@ to {
     z-index: 100000;
 }
 .sectionTrailer{
-	width: 100%;
-    margin: auto;
+	position: absolute;
+    top: 0;
+    width: 100%;
+    max-height: 80vh;
 }
-
+iframe{
+	border-radius:15px 15px 0  0 ;
+}
 
 /* details */
 .upDerails{
@@ -1198,7 +1202,7 @@ details summary{
 	}
 	.boxImgs:hover .overlaycards {
 		backdrop-filter: blur(5px);
-		background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(23,42,122,0.499124649859944) 38%, rgba(17, 27, 95, 0.764) 71%);
+		background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(12, 24, 72, 0.499) 38%, rgba(17, 27, 95, 0.764) 71%);
 		width: 200px;
 		height: 300px;
 	}
