--- a/asstes/css/style-section.css
+++ b/asstes/css/style-section.css
@@ -337,8 +337,13 @@ header{
     z-index: 100000;
 }
 .sectionTrailer{
-	width: 100%;
-    margin: auto;
+	position: absolute;
+    top: 0;
+    width: 100%;
+    max-height: 80vh;
+}
+iframe{
+	border-radius:15px 15px 0  0 ;
 }
 /* filter search */
 .btn-group{
@@ -424,6 +429,7 @@ header li a{
     width: 100%;
     height: 300px;
     color: var(--darkMode);
+	
 }
 .content .boxImgs{
 	position: relative;
