--- a/asstes/css/style-room.css
+++ b/asstes/css/style-room.css
@@ -1,5 +1,4 @@
 ☺/*----------------------------------------
-[Master Stylesheet]
 
 Project:	Blur.TV HTML Template
 Version:	1.0
@@ -7,347 +6,17 @@ Version:	1.0
 /*----------------------------------------
 [Table of contents]
 
-1. Fonts
-2. Common styles
-3. Header
-4. Section
-5. Catalog
-6. Profile
-7. Breadcrumb
-8. Card
-9. Live
-10. Interview
+1. Theme Dark & light
+2. Header Video player
+3. Episodes
+4. Start Content
+5. Responsive
+
 
 ----------------------------------------*/
 
-/*============== Fonts ==============*/
-@import url(//db.onlinewebfonts.com/c/153445a28aa0ff5caa797611f4d019fa?family=strangferfixcs);
-@import url(//db.onlinewebfonts.com/c/7712e50ecac759e968ac145c0c4a6d33?family=Droid+Arabic+Kufi);
-/*================================== */
-
-/*==============================
-	Common styles
-==============================*/
-
-a { text-decoration: none;}
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-ul{list-style:none;}
-
-/*==============================
-Theme Dark & light
-==============================*/
-:root{
-	--lightMode: #EEE;
-	--darkMode: rgba(9,18,32,1);
-	--yellow: orange;
-	--red: #0051ff;
-	--blue-red: #FF0000;
-	--red-blue: #0051ff;
-	--blue-white: #eeeeee;
-	--mov: #4b4b4f;
-	--blue: #eeeeee;
-	--blue2: #cedfff;
-	--blue3: #0051ff;
-	--aside: #ffffff;
-	--head: #091226;
-	--yellow-blue: #0f1a32;
-	--gray-blue: #3C4B57;
-	--underline: #00000042;
-	--opacity: rgba(233, 233, 233, 0.544);
-	--opacity1:#eeeeee;
-	--opacity2:#ffd4d645;
-	--opacity3:#f0edff00;
-	--blue-gray-blue: #3C4B57;
-	--bg-gradient:rgba(0, 45, 107, 0);
-	--btn-blur2: #eeeeeeb6;
-	--btn-blur:#eeeeeeb4;
-}
-
-html[data-theme="lightMode"]{
-	--darkMode: #EEE;
-	--lightMode: rgba(9,18,32,1);
-	--yellow: #F7FF00;
-	--red-blue: #FF0000;
-	--blue-red: #0051ff;
-	--red: #FF0000;
-	--blue-white: #0B1538;
-	--head: #09122600;
-	--yellow-blue: #F7FF00;
-	--mov: #111C5F;
-	--blue: #0B1538;
-	--blue2: rgba(9,18,32,1);
-	--blue3: #091226;
-	--aside: #0b1538d1;
-	--gray-blue: #091226;
-	--gray: #35363a00;
-	--underline: #eeeeee42;
-	--opacity:rgba(9, 18, 32, 0.895);
-	--opacity1: rgba(9,18,32,1);
-	--opacity2: rgba(0,0,0,0.6980042016806722);
-	--blue-gray-blue: #091226;
-	--opacity3: rgba(0,0,0,0);
-	--bg-gradient:rgba(0, 44, 107, 0.62);
-	--btn-blur:rgba(9,18,32,1);
-	--btn-blur2:rgba(9,18,32,1);
-}
-html,body{
-	background: var(--lightMode);
-	color: var(--darkMode);
-	font-family: 'Source Sans Pro', 'Droid Arabic Kufi', sans-serif;
-	overflow-x: hidden;
-	font-weight: 400;		
-	transition: all .5s ease;
-	font-weight: normal;	
-}
 
 
-/*==============================
-Navbar
-==============================*/
-nav {
-width: 100%;
-height: 70px;
-background: var(--blue2);
-padding-top: 10px;
-transition: all 1s;
-}
-nav .container-custom{
-	display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/*...... logo .......*/
-.logo{
-	/* font-family: 'Strangferfixcs'; */
-	width: 150px;
-	font-family: sans-serif;
-	font-size: 30px;
-	font-weight: bolder;
-	display: inline-block;
-	color: var(--darkMode);
-}
-.logo span{color: var(--yellow);}
-/*...... End logo .......*/
-
-/*......  tools nsv .......*/
-nav .toolsNav{
-	width: 70%;
-    max-width: 500px;
-	z-index: 9;
-}
-
-nav .toolsNav .item-nav{
-	color: var(--darkMode);
-	display: flex;
-	justify-content: space-around;
-}
-
-nav .item-nav li a{
-	transition: all .2s ease-in;
-	color: var(--darkMode);
-}
-nav .item-nav li:hover  {
-	height: 23px;
-}
-nav .item-nav li:hover .hvr {
-	border-bottom: 3px solid var(--yellow);
-	color: var(--darkMode);
-}
-
-.activeNavBar{
-	border-bottom: 3px solid #94ff52;
-	color: #c6c0c0;
-}
-nav .item-nav li:hover a {
-	color: #c6c0c0;
-}
-nav .item-nav li:hover .dropdownList {
-	display: block;
-}
-.item-nav li .dropdownList {
-	transition: all 2s ease-in-out;
-    position: absolute;
-    top: 24px;
-    left: -17px;
-    width: 200px;
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
-    background: #1d1d30ea;
-	display: none;
-}
-.item-nav li .dropdownList a{
-	display: block;
-	color: #DDD;
-	padding: 15px 0px 15px 5px;
-	margin: 0 15px;
-	transition: all .2s ease-in-out;
-	border-bottom: 1px solid #474364;
-}
-.item-nav li .dropdownList a:hover{
-	border-left: 2px solid #F7FF00;
-}
-/* icons navbar */
-nav .iconsnav{
-	width: 213px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-nav .iconsnav .icon{
-	list-style: none;
-	color: var(--darkMode);
-	display: flex;
-	justify-content: space-around;
-	margin: auto;
-}
-button{
-	background: none;
-	color: var(--darkMode);
-	border: none;
-}
-.icon svg{
-	text-shadow: 1px 1px 12px #d1c3fb;
-	font-size: #f00;
-}
-.icon svg:hover{
-	color: var(--btn-yellow);
-}
-
-/* Search */
-#sectionSearch {
-	display: none;
-	width: 100%;
-	height: 100%;
-	backdrop-filter: blur(10px);
-	background: var(--opacity);
-	color: var(--darkMode);
-	position: fixed;
-	top: 0;
-	right: 0;
-	padding-top: 5%;
-	z-index: 100000;
-}
-.sectionSearch {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-}
-#sectionSearch form{
-	width: auto;
-    height: 40px;
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-    background: var(--blue);
-    border-radius: 5px;
-	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-	transition: all .5s ease;
-}
-#sectionSearch form input{
-	min-width: 340px;
-	max-width: 500px;
-	padding-left: 15px;
-	padding-right: 15px;
-	color: var(--darkMode);
-	background: none;
-	outline: none;
-	border: none;
-}
-#sectionSearch form:hover{
-	border:1px solid #fbff0032;
-    box-shadow:  2px 2px 22px rgba(83, 47, 114, 0.593);    
-    background: var(--mov);
-}
-#sectionSearch form svg{
-	transition: all .5s ease;
-	padding: 10px 15px;
-	font-size: 22px;
-	border-radius: 5px;
-	color: var(--darkMode) !important;
-
-}
-#sectionSearch form:hover svg{
-	color: #eeeeee !important;
-
-}
-#sectionSearch form svg:hover{
-	color: #0b1537 !important;
-	background: #909090;
-}
-#sectionSearch form svg:active{
-	background: #83d80b;
-}
-/*...... End Navbar .......*/
-
-
-/*==============================
-	aside
-==============================*/
-aside{
-	position: fixed;
-    top: 0;
-    right: 0;
-    width: 400px;
-    max-width: 100%;
-    height: 100vh;
-	overflow-y: scroll;
-    backdrop-filter: blur(10px);
-	background: var(--aside);
-    z-index: 100;
-}
-aside .head{
-	padding: 20px;
-}
-
-.btnfixed{
-	height: 160px;
-    position: absolute;
-    right: 30px;
-    top: 110px;
-    display: flex !important;
-    flex-direction: column;
-}
-aside .userAside{ 
-	font-size: 20px!important;
-    color: var(--darkMode);
-}
-aside .userAside span{ 
-	font-size: 20px!important;
-    color: var(--darkMode);
-    background: var(--lightMode);
-    border-radius: 10px;
-    padding: 10px;
-	margin-right: 10px;
-}
-aside .listItem, #btn-movies{
-	padding: 20px;
-	transition: all .5s ease;
-    color: var(--darkMode);
-    font-size: 16px;
-}
-aside .listItem:hover{
-    border-left: 4px solid #009aff;
-    background: rgba(98, 0, 255, 0.273);
-}
-aside .active{
-    border-left: 4px solid #009aff !important;
-    background: rgb(13 0 255 / 26%)!important;
-}
-/* dropdown Aside */
-aside .dropMovie, .dropSeries{
-	padding: 10px 20px 10px 70px !important;
-	font-size: 17px!important;
-	transition: all .5s ease;
-	display: none;
-}
-aside a{color: var(--darkMode);
-}
 /*==============================
 	Header Video player 
 ==============================*/
@@ -379,6 +48,21 @@ header{
 }
 .video-js .vjs-control-bar {
     background-color: rgb(16 30 82);
+}
+/* liks & Share */
+.liksVid{
+	display: inline-flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 10px
+}
+.liksVid span{
+	cursor: pointer;
+	color: var(--darkMode);
+}
+.liksVid span:hover{
+	color: #929292;
 }
 .boxtable{
 	color: #EEE !important;
@@ -430,14 +114,15 @@ header{
     box-shadow: inset 1px 1px 12px rgb(28 29 2 / 90%);
 }
 .boxtable ul .active{
-	background: var(--red);
-	color:#EEE!important;
-    box-shadow: inset 4px 4px 6px rgb(28 29 2 / 90%);
+	box-shadow: inset 1px 1px 10px rgb(88 105 255 / 77%);
+	color:var(--darkMode)!important;
 }
 .boxtable ul .active a{
-	color:#EEE!important;
+	color:var(--darkMode)!important;
 }
-/*...... End Header .......*/
+/*==============================
+	End Header
+==============================*/
 
 
 /*==============================
@@ -533,7 +218,9 @@ header{
 	box-shadow: inset 4px 4px 6px rgb(28 29 2 / 90%);
 
 }
-/*...... End Episodes .......*/
+/*==============================
+	End Episodes
+==============================*/
 
 
 /*==============================
@@ -589,7 +276,7 @@ iframe{
 	
 }
 .content .boxImgs:hover{
-	z-index: 0; /*test  */
+	z-index: 0; 
 }
 .content .boxImgs .itemsCard{
 	position: absolute;
@@ -612,7 +299,7 @@ iframe{
 	transition: all .3s ease-in;
 	border-radius: 10px;
 	width: 210px;
-    height: 310px;
+    height: 330px;
 }
 .content .boxImgs:hover .Img{
 	transform: scale(0.9);
@@ -637,7 +324,7 @@ iframe{
 }
 .boxImgs:hover .overlaycards {
 	backdrop-filter: blur(5px);
-	background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(23,42,122,0.499124649859944) 38%, rgba(17, 27, 95, 0.764) 71%);
+	background: linear-gradient(45deg, rgba(0,0,0,0) 0%, rgba(23,42,122,0.499124649859944) 26%, rgba(17, 27, 95, 0.764) 71%);
 	width: 210px;
 	height: 300px;
 }
@@ -773,149 +460,9 @@ iframe{
     justify-content: center;
     align-items: center;
 }
-/*...... End Content .......*/
-
-
 /*==============================
-	Footer
+	End Content
 ==============================*/
-.footer {
-	background-color:  var(--blue);
-	border-top: 1px solid var(--underline);
-  }
-  .footer__content {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
-	padding: 50px 0 30px;
-	position: relative;
-  }
-  .footer__logo {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	width: 120px;
-	order: 1;
-  }
-  .footer__logo img {
-	width: 100%;
-	display: block;
-  }
-  .footer__nav {
-	background:  var(--blue);
-    order: 2;
-    display: flex;
-    flex-direction: flex-start;
-    margin-top: 30px;
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .footer__nav a {
-	font-size: 14px;
-	color: var(--darkMode);
-	margin-right: 20px;
-  }
-  .footer__nav a:last-child {
-	margin-right: 0;
-  }
-  .footer__nav a:hover {
-	color: #f9ab00;
-  }
-  .footer__copyright {
-	display: inline-block;
-    order: 3;
-	width: 330px;
-    margin-top: 50px;
-    font-size: 12px;
-    line-height: 16px;
-    color: var(--darkMode);
-    letter-spacing: 0.4px;
-  }
-  .footer__copyright a {
-	color: #f9ab00;
-  }
-  .footer__copyright a:hover {
-	color: #f9ab00;
-	text-decoration: underline;
-  }
-  .footer__back {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	width: 40px;
-	height: 40px;
-	border: 2px solid #8900f9;
-	color: var(--darkMode);
-	position: absolute;
-	right: 0;
-	bottom: 30px;
-	border-radius: 6px;
-	font-size: 26px;
-  }
-  .footer__back:hover {
-	color: #8900f9;
-  }
-  @media (min-width: 768px) {
-	.footer__content {
-	  flex-direction: row;
-	  justify-content: flex-start;
-	  align-items: center;
-	  padding: 0;
-	  height: 80px;
-	}
-	.footer__nav {
-	  order: 3;
-	  margin-top: 0;
-	  margin-left: auto;
-	  margin-right: 80px;
-	  justify-content: flex-end;
-	}
-	.footer__nav a {
-	  margin-right: 30px;
-	}
-	.footer__nav a:last-child {
-	  margin-right: 0;
-	}
-	.footer__copyright {
-	  order: 2;
-	  margin-top: 0;
-	  margin-left: 30px;
-	}
-	.footer__back {
-	  position: absolute;
-	  bottom: 50%;
-	  margin-bottom: -20px;
-	}
-  }
-  @media (min-width: 1200px) {
-	.footer__copyright {
-	  margin-left: 40px;
-	}
-	.footer__nav a {
-	  margin-right: 40px;
-	}
-	.footer__nav a:last-child {
-	  margin-right: 0;
-	}
-  }
-  @media (min-width: 1440px) {
-	.footer__copyright {
-	  margin-left: 50px;
-	}
-	.footer__nav {
-	  margin-right: 95px;
-	}
-	.footer__nav a {
-	  margin-right: 50px;
-	}
-	.footer__nav a:last-child {
-	  margin-right: 0;
-	}
-  }
-/*...... End Footer .......*/
 
 
 
@@ -1112,9 +659,7 @@ iframe{
 	.d-inline-block-450{
 		display: inline-block!important;
 	}
-	/*==============================
-		Header
-	==============================*/
+	/* Header */
 	h4{font-size:16px}
 	.titleVideo{
 		letter-spacing: 0px;
@@ -1159,105 +704,4 @@ iframe{
 		min-width: auto!important;
 	}
 	
-}
-
-/*==============================
-	Loading
-==============================*/
-.load{
-	background-image: radial-gradient(circle farthest-corner at center, var(--blue-gray-blue) 0%, #1C262B 100%);
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: -webkit-box;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	opacity: 1;
-	visibility: visible;
-	z-index: 9999;
-	-webkit-transition: opacity 0.25s ease;
-	transition: opacity 0.25s ease;
-}
-.load .logo{
-	text-shadow: 1px 1px 12px #d1c3fb;
-    font-size: 38px;
-	-webkit-box-reflect: below -20px linear-gradient(transparent, transparent, #0005);
-}
-.loader {
-	display: flex;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    perspective: 800px;
-    align-items: center;
-    justify-content: center;
-}
-@media (max-width: 380px) {
-	.loader {
-	display: flex;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    perspective: 800px;
-    align-items: center;
-    justify-content: center;
-	}
-}
-	.loaded {
-	display: none;
-	opacity: 0;
-	visibility: hidden;
-	pointer-events: none;
-	}
-	.inner {
-	position: absolute;
-	box-sizing: border-box;
-	width: 100%;
-	height: 100%;
-	border-radius: 50%;    
-	}
-	.inner.one {
-	left: 0%;
-	top: 0%;
-	animation: rotate-one 1.2s linear infinite;
-	border-bottom: 3px solid #fcfaff;
-	}
-	.inner.two {
-	right: 0%;
-	top: 0%;
-	animation: rotate-two 1.2s linear infinite;
-	border-right: 3px solid #fcfaff;
-	}
-	.inner.three {
-	right: 0%;
-	bottom: 0%;
-	animation: rotate-three 1.2s linear infinite;
-	border-top: 3px solid #fcfaff;
-	}
-@keyframes rotate-one {
-0% {
-	transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
-}
-100% {
-	transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
-}
-}
-@keyframes rotate-two {
-0% {
-	transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
-}
-100% {
-	transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
-}
-}
-@keyframes rotate-three {
-0% {
-	transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
-}
-100% {
-	transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
-}
 }
